--- a/css/styles.css
+++ b/css/styles.css
@@ -675,7 +675,7 @@ margin-bottom: 20px;
     flex-wrap: wrap;
     justify-content: center;
     margin: -15px;
-}с
+}
 .portfolio-img {
     width: 367px;
 }
