--- a/css/styles.css
+++ b/css/styles.css
@@ -715,10 +715,10 @@ margin-bottom: 20px;
     background-color: var(--block-bg);
     border-radius: 4px;
     border-color: transparent;
-    /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
     font-style: normal;
     border: 0px;
-     transition-property: color, background-color;
+     transition-property: color, background-color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
