--- a/css/styles.css
+++ b/css/styles.css
@@ -225,14 +225,25 @@ transition-property: color;
   overflow: hidden;
 }
 .hero{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    /* justify-content: center;
+    align-items: center; */
    
+   
+}
+.overlay {
+    display: block;
+    max-width: 1600px;
     height: 600px;
+    margin: 0 auto;
+  
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    
+    
     background-color: var(--hero-bg-color);
-    /* padding-top: 200px;
-    padding-bottom: 200px; */
+    
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
@@ -749,7 +760,7 @@ margin-bottom: 20px;
     margin: -15px;
 }
 .portfolio-thumb {
- width: 368px;
+ width: 367px;
  position: relative;
  overflow: hidden;
 }
