--- a/css/styles.css
+++ b/css/styles.css
@@ -674,21 +674,20 @@ margin-bottom: 20px;
 
 /* MODAl */
 
-.modal-animation{
-     
-}
+
 .backdrop {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    opacity: 1;
     background-color: rgba(0, 0, 0, 0.2);
      transition-property: opacity;
     transition-duration: 2250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop.is-hidden {
+.is-hidden {
     opacity: 0;
     pointer-events: none;
     
